[tool.poetry]
name = "lambdamoo-db"
version = "0.1.9"
description = "Parser for LambdaMOO databases"
authors = ["Katelyn Gigante <clockwork.singularity@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "lambdamoo_db"}]

[tool.poetry.dependencies]
python = "^3.10"
attrs = "^22.2.0"
cattrs = "^22.2.0"
click = "^8.1.3"
parse = "^1.19.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
moodb2flat = "lambdamoo_db.cli:moodb2flat"

[tool.black]
line-length = 160
